force-app/main/default/objects/Historial_del_paciente__c/Historial_del_paciente__c.object-meta.xml
<CustomObject>
    <label>Historial del paciente</label>
    <nameField>
        <displayFormat>H-{000000}</displayFormat>
        <label>Nro de Historial del paciente</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Historiales de pacientes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>