force-app/main/default/objects/Historial_del_paciente__c/fields/Dias_en_ese_estado_2__c.field-meta.xml
<CustomField>
    <fullName>Dias_en_ese_estado_2__c</fullName>
    <formula>Fecha_de_fin__c - DATEVALUE(CreatedDate)</formula>
    <label>Dias en ese estado 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>