force-app/main/default/objects/Historial_del_paciente__c/fields/Dias_en_este_estado__c.field-meta.xml
<CustomField>
    <fullName>Dias_en_este_estado__c</fullName>
    <formula>IF( Estado__c = TEXT( Paciente__r.Estado_de_paciente__c ), TODAY()- DATEVALUE(CreatedDate), Fecha_de_fin__c - DATEVALUE(CreatedDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Días en este estado</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>