force-app/main/default/objects/Historial_del_paciente__c/fields/Paciente__c.field-meta.xml
<CustomField>
    <fullName>Paciente__c</fullName>
    <label>Paciente</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Historiales de pacientes</relationshipLabel>
    <relationshipName>Historiales_de_pacientes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>